--- a/index.html
+++ b/index.html
@@ -1,92 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html >
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人介绍</title>
-    <link rel="stylesheet" href="css/style.css">
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>我的驿站</title>
+<link href="images/css.css" rel="stylesheet" type="text/css" />
+<style type="text/css">
+ 
+</style>
 </head>
-
+ 
 <body>
-    <div id="bigbox">
-        <div id="banner">
-            <img src="picture/banner.png" alt="">
-        </div>
-        <nav>
-            <a class="dangqian" href="">首页</a>
-            <a href="duanwen.html">短文</a>
-            <a href="rizhi.html">日志</a>
-            <a href="liuyan.html">留言板</a>
-        </nav>
-        <div id="main">
-            <div id="main_left">
-                <h2>关于我</h2>
-                <img src="picture/me.png" alt="">
-                <p>
-                    <span>姓名</span>:*****<br>
-                    <span>性别</span>:男<br>
-                    <span>爱好</span>:听歌 踢足球 打游戏<br>
-                    <span>性格</span> :开朗<br>
-                    <span>家乡</span>:新疆乌恰县<br>
-                    <span>专业</span>:计算机网络技术
-                </p>
-            </div>
-            <div id="main_right">
-                <h2>热爱生活</h2>
-                <p>
-                    一、岁月从来不曾静好，只是有人在替你背负枷锁，含泪前行。也许是父母，也许是朋友，也许是陌生人……无论是谁，请记得常怀感恩之心。
-                </p>
-                <p>
-                    二、这个世界并不完美，甚至有点残酷。你无法决定下一段旅途遇见的是好事还是坏事，可你能决定面对它们的态度。你看这个世界的角度，决定了这个世界给你的温度。
-                </p>
-                <p>
-                    三、总会有一件事让你瞬间长大，也总会有一个人让你泪如雨下。愿你早日领教这个世界的深深恶意，让自己活得开心得意。
-                </p>
-                <p>
-                    四、想要与众不同，却总随遇而安，想要做很多未做的事，却在现实棘手的吃喝拉撒前低下了头，我们间歇性热血满腔，长时间迷茫犯懒，别等了，再努力试试看！
-                </p>
-                <img src="picture/life.png" alt="">
-            </div>
-        </div>
-        <div id="luxing">
-            <h2>旅行生活</h2>
-            <div>
-                <div id="picture">
-                    <img src="picture/11.png" alt="">
-                    <p>在日月潭</p>
-                </div>
-                <div id="picture">
-                    <img src="picture/22.png" alt="">
-                    <p>
-                        在毛里求斯
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="picture/33.png" alt="">
-                    <p>
-                        在马尔代夫
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="picture/44.png" alt="">
-                    <p>
-                        在玉龙雪山
-                    </p>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <p>
-                版权所有©*****
-            </p>
-        </footer>
-    </div>
+<table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
+  <tr>
+    <td><img src="images/logo2.png"  height="100" /></td>
+    <td width="100" align="center"><a href="index.html">主页</a></td>
+    <td width="100" align="center"><a href="haoyou.html">我的偶像</a></td>
+    <td width="100" align="center"><a href="photo.html">我的相册</a></td>
+    <td width="100" align="center"><a href="rizhi.html">我的日志</a></td>
+    <td width="100" align="center"><a href="yinyue.html">我的音乐</a></td>
+  </tr>
+</table>
+<table width="800" border="0" align="center" cellpadding="0" cellspacing="0" class="main">
+  <tr>
+    <td></td>
+  </tr>
+  <tr>
+    <td><table width="760" border="0" cellspacing="10" cellpadding="0">
+      <tr>
+        <td><p >我的个人简介。 </p>
+          <p >姓名：lz</p>
+          <p >性别：男</p>
+          <p >生日：0809</p>
+          <p >学校：某某大学</p>
+          <p >爱好：摄影，乒乓球，学习，王者荣耀</p>
+          <p >你看&#8212;&#8212;</p></td>
+        <td><img src="images/1.jpg" width="383" height="289" /></td>
+      </tr>
+      <tr>
+        <td><img src="images/2.jpg" width="400" /></td>
+        <td>
+          <p >好吧，我承认我兴趣广泛。 </p>
+          <p >包括吃喝玩乐睡。 </p>
+          <p >当然还有一些低调奢华有内涵的部分了。 </p>
+          <p >什么没事捧着我的小单反出去摄摄影啦。 </p>
+          <p >闲的无聊用手捣鼓两下我的小钢琴啦。 </p>
+          <p ></p></td>
+      </tr>
+      <tr>
+        <td><p >什么吉他，竹笛，那都不在话下。嘿嘿。 </p>
+          <p >是不是很崇拜我啊。 </p>
+          <p >恩。。。我的朋友很多。但是敌人也很多。          </p>
+          <p >综上所述要想更多地了解我，就来看看我的小世界吧。 </p></td>
+        <td><img src="images/3.jpg" width="400" /></td>
+      </tr>
+    </table></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+</table>
 </body>
-
 </html>
-
-
 
