--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <td><table width="760" border="0" cellspacing="10" cellpadding="0">
       <tr>
         <td><p >我的个人简介。 </p>
-          <p >姓名：lz</p>
-          <p >性别：男</p>
-          <p >生日：0809</p>
-          <p >学校：某某大学</p>
-          <p >爱好：摄影，乒乓球，学习，王者荣耀</p>
-          <p >你看&#8212;&#8212;</p></td>
-        <td><img src="images/1.jpg" width="383" height="289" /></td>
+          <p >姓名：彭坪</p>
+          <p >性别：女</p>
+          <p >生日：0128</p>
+          <p >学校：四川轻化工大学</p>
+          <p >爱好：睡觉，王者荣耀</p>
+          </td>
+        <td><img src="1.jpg" width="383" height="289" /></td>
       </tr>
       <tr>
-        <td><img src="images/2.jpg" width="400" /></td>
+        <td><img src="2.jpg" width="400" /></td>
         <td>
           <p >好吧，我承认我兴趣广泛。 </p>
           <p >包括吃喝玩乐睡。 </p>
@@ -51,7 +51,7 @@
           <p >是不是很崇拜我啊。 </p>
           <p >恩。。。我的朋友很多。但是敌人也很多。          </p>
           <p >综上所述要想更多地了解我，就来看看我的小世界吧。 </p></td>
-        <td><img src="images/3.jpg" width="400" /></td>
+        <td><img src="3.jpg" width="400" /></td>
       </tr>
     </table></td>
   </tr>
