--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p >性别：女</p>
           <p >生日：0128</p>
           <p >学校：四川轻化工大学</p>
-          <p >爱好：睡觉，王者荣耀</p>
+          <p >爱好：吃饭，睡觉，王者荣耀</p>
           </td>
         <td><img src="1.jpg" width="383" height="289" /></td>
       </tr>
@@ -40,16 +40,14 @@
         <td><img src="2.jpg" width="400" /></td>
         <td>
           <p >好吧，我承认我兴趣广泛。 </p>
-          <p >包括吃喝玩乐睡。 </p>
+          <p >哈哈哈。 </p>
           <p >当然还有一些低调奢华有内涵的部分了。 </p>
-          <p >什么没事捧着我的小单反出去摄摄影啦。 </p>
-          <p >闲的无聊用手捣鼓两下我的小钢琴啦。 </p>
-          <p ></p></td>
+        
+        </td>
       </tr>
       <tr>
-        <td><p >什么吉他，竹笛，那都不在话下。嘿嘿。 </p>
-          <p >是不是很崇拜我啊。 </p>
-          <p >恩。。。我的朋友很多。但是敌人也很多。          </p>
+       <td>
+          <p >恩。。。我的朋友很少。因为不爱社交。          </p>
           <p >综上所述要想更多地了解我，就来看看我的小世界吧。 </p></td>
         <td><img src="3.jpg" width="400" /></td>
       </tr>
