--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
-    <td><img src="images/logo2.png"  height="100" /></td>
+    <td><img src="1.jpeg"  height="100" /></td>
     <td width="100" align="center"><a href="index.html">主页</a></td>
     <td width="100" align="center"><a href="haoyou.html">我的偶像</a></td>
     <td width="100" align="center"><a href="photo.html">我的相册</a></td>
@@ -34,7 +34,7 @@
           <p >学校：四川轻化工大学</p>
           <p >爱好：吃饭，睡觉，王者荣耀</p>
           </td>
-        <td><img src="1.jpeg" width="383" height="289" /></td>
+        <td><img src="3.jpeg" width="383" height="289" /></td>
       </tr>
       <tr>
         <td><img src="2.jpeg" width="400" /></td>
