--- a/photo.html
+++ b/photo.html
@@ -32,14 +32,14 @@
       <tr>
         <td valign="top"><table width="800" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td><img src="images/b01.jpg" width="250" border="0" /></td>
-            <td><img src="images/b04.jpg" width="260" border="0" /></td>
-            <td><img src="images/b03.jpg" width="260" /></td>
+            <td><img src="11.jpg" width="250" border="0" /></td>
+            <td><img src="12.jpg" width="260" border="0" /></td>
+            <td><img src="13.jpg" width="260" /></td>
           </tr>
           <tr>
-            <td><img src="images/b06.jpg" width="260" /></td>
-            <td><img src="images/b07.jpg" width="260" /></td>
-            <td><img src="images/b02.jpg" width="260" />
+            <td><img src="14.jpg" width="260" /></td>
+            <td><img src="15.jpg" width="260" /></td>
+            <td><img src="16.jpg" width="260" />
              </td>
           </tr>
           <tr>
