--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
-    <td><img src="1.jpeg"  height="100" /></td>
+  
     <td width="100" align="center"><a href="index.html">主页</a></td>
     <td width="100" align="center"><a href="haoyou.html">我的偶像</a></td>
     <td width="100" align="center"><a href="photo.html">我的相册</a></td>
@@ -34,10 +34,10 @@
           <p >学校：四川轻化工大学</p>
           <p >爱好：吃饭，睡觉，王者荣耀</p>
           </td>
-        <td><img src="3.jpeg" width="383" height="289" /></td>
+        <td><img src="1.jpeg" width="383" height="289" /></td>
       </tr>
       <tr>
-        <td><img src="2.jpeg" width="400" /></td>
+        <td><img src="5.jpeg" width="400" /></td>
         <td>
           <p >好吧，我承认我兴趣广泛。 </p>
           <p >哈哈哈。 </p>
@@ -49,7 +49,7 @@
        <td>
           <p >恩。。。我的朋友很少。因为不爱社交。          </p>
           <p >综上所述要想更多地了解我，就来看看我的小世界吧。 </p></td>
-        <td><img src="3.jpeg" width="400" /></td>
+        <td><img src="w.webp" width="400" /></td>
       </tr>
     </table></td>
   </tr>
