--- a/haoyou.html
+++ b/haoyou.html
@@ -37,7 +37,7 @@
           <p >周杰伦热心公益慈善，多次向中国内地灾区捐款捐物。2008年捐款援建希望小学。2014年担任中国禁毒宣传形象大使。   </p></td>
         <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td align="center"><img src="images/a2.jpg" width="200" border="0" /></td>
+            <td align="center"><img src="z.jpeg" width="200" border="0" /></td>
             </tr>
           <tr>
             <td align="center"><img src="images/a4.jpg" width="200" border="0" /></td>
