--- a/photo.html
+++ b/photo.html
@@ -38,7 +38,7 @@
           </tr>
           <tr>
             <td><img src="14.jpg" width="260" /></td>
-            <td><img src="17.jpg" width="260" /></td>
+            <td><img src="1.7.png" width="260" /></td>
             <td><img src="16.jpg" width="260" />
              </td>
           </tr>
