--- a/yinyue.html
+++ b/yinyue.html
@@ -10,7 +10,7 @@
 <body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
-    <td><img src="images/logo2.png"  height="100" /></td>
+    <td><img src="wang.jpeg"  height="100" /></td>
     <td width="100" align="center"><a href="index.html">主页</a></td>
     <td width="100" align="center"><a href="haoyou.html">我的偶像</a></td>
     <td width="100" align="center"><a href="photo.html">我的相册</a></td>
