--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <tr>
     <td><table width="760" border="0" cellspacing="10" cellpadding="0">
       <tr>
-        <td><p >我的个人简介。 </p>
+        <td><p ><B>我的个人简介。</B> </p>
           <p >姓名：彭坪</p>
           <p >性别：女</p>
           <p >生日：0128</p>
