--- a/yinyue.html
+++ b/yinyue.html
@@ -32,8 +32,8 @@
       <tr>
         <td valign="top"><p>　　引 </p>
           <p >我与音乐 </p>
-          <p >我和我的钢琴是最好的伙伴。 </p>
-          <p >没有家人陪伴的日子，我用手指在琴键上敲出一个个充满温暖的琴音。 </p>
+          <p >我和我的音乐是最好的伙伴。 </p>
+          <p >没有家人陪伴的日子，它让我感到温暖。 </p>
           <p >我也爱流行。 </p>
 <p >五月天，是我最有力的精神后盾。 </p>
           <p >我其实喜欢他们歌里的文字与倔强。 </p>
