--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>我的驿站</title>
-<link href="images/css.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
+<link  rel="stylesheet" type="text/css" href="images/css.css">
+
  
 </style>
 </head>
