--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>
 </head>
  
-<body image="beijing.jpeg">
+<body >
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
   
