--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>我的驿站</title>
-<link  rel="stylesheet" type="text/css" href="images/css.css">
+<link  rel="stylesheet" type="text/css" href="css.css">
 
  
 </style>
