--- a/yinyue.html
+++ b/yinyue.html
@@ -57,7 +57,7 @@
              </td>
           </tr>
           <tr>
-            <td><img src="wang.jpeg" width="300" border="0" /></td>
+            <td><img src="yinyue.jpg" width="300" border="0" /></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
