--- a/yinyue.html
+++ b/yinyue.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 </style>
 </head>
-<body>
+<body  background="beijing2.jpeg">
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
   
