--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
 </style>
 </head>
  
-<body  background="beijing2.jpeg">
+<body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
    
