--- a/haoyou.html
+++ b/haoyou.html
@@ -9,7 +9,7 @@
 </style>
 </head>
  
-<body background="beijing2.jpeg">
+<body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
     <td width="100" align="center"><a href="index.html">主页</a></td>
