--- a/haoyou.html
+++ b/haoyou.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>我的驿站</title>
-<link href="images/css.css" rel="stylesheet" type="text/css" />
+<link href="css.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
  
 </style>
