--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>我的驿站</title>
+<title>我的博客</title>
 <link  rel="stylesheet" type="text/css" href="css.css">
 
 </head>
