--- a/photo.html
+++ b/photo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html >
 <html >
 <head>
+ <link rel="stylesheet" href="dist/css/swiper-bundle.min.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>我的驿站</title>
 <link href="css.css" rel="stylesheet" type="text/css" />
@@ -10,6 +11,22 @@
 </head>
  
 <body>
+ <div class="swiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+    </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination"></div>
+    
+    <!-- 如果需要导航按钮 -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+    
+    <!-- 如果需要滚动条 -->
+    <div class="swiper-scrollbar"></div>
+</div>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
   <tr>
    
@@ -59,5 +76,6 @@
     <td>&nbsp;</td>
   </tr>
 </table>
+    <script src="dist/js/swiper-bundle.min.js"></script>
 </body>
 </html>
