--- a/photo.html
+++ b/photo.html
@@ -13,9 +13,12 @@
 <body>
  <div class="swiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide"><img src=11.jpg></div>
+        <div class="swiper-slide">12.jpg</div>
+        <div class="swiper-slide">13.jpg</div>
+       <div class="swiper-slide"><img src=14.jpg></div>
+        <div class="swiper-slide">img src=17.jpg</div>
+        <div class="swiper-slide">img src=16.jpg</div>
     </div>
     <!-- 如果需要分页器 -->
     <div class="swiper-pagination"></div>
@@ -46,6 +49,7 @@
       <tr>
         <td><div class="title">我的相册</div></td>
         </tr>
+     <!--
       <tr>
         <td valign="top"><table width="800" border="0" cellspacing="0" cellpadding="0">
           <tr>
@@ -74,7 +78,8 @@
   </tr>
   <tr>
     <td>&nbsp;</td>
-  </tr>
+  </tr> 
+-->
 </table>
     <script src="dist/js/swiper-bundle.min.js"></script>
 </body>
