--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>我的空间 | 关于我</title>
     <meta name="theme-color" content="#ffc91d"/>
-    <link rel="icon" href="../img/favicon.ico" />
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/index.css" >
-    <link href="../css/kico.css" rel="stylesheet" type="text/css"/>
-    <link href="../css/paul.css" rel="stylesheet" type="text/css"/>
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css" >
+    <link href="css/kico.css" rel="stylesheet" type="text/css"/>
+    <link href="css/paul.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
 </head>
@@ -16,7 +16,7 @@
     <!--头部-->
     <div class="nav">
         <!--   头部导航 navigator     -->
-            <img src="../img/头像.jpg" alt="logo 图">
+            <img src="img/头像.jpg" alt="logo 图">
             <span class="title">个人空间</span>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             <a href="index.html" ><p>个人信息</p></a>
@@ -93,37 +93,37 @@
             <div class="row">
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web1.png"/>
+                        <img src="img/works/web1.png"/>
                         <p>个人博客</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web3.png"/>
+                        <img src="img/works/web3.png"/>
                         <p>学生信息管理系统</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web2.png"/>
+                        <img src="img/works/web2.png"/>
                         <p>个人博客</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web4.png"/>
+                        <img src="img/works/web4.png"/>
                         <p>学生信息管理系统</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web5.jpg"/>
+                        <img src="img/works/web5.jpg"/>
                         <p>订餐管理系统</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="../img/works/web6.jpg"/>
+                        <img src="img/works/web6.jpg"/>
                         <p>订餐管理系统</p>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     </ul>
                 </div>
                 <div class="col-m-4 center-fixed">
-                    <img src="../img/1.jpeg"/>
+                    <img src="img/1.jpeg"/>
                 </div>
             </div>
         </div>
@@ -151,15 +151,15 @@
 
 </main>
 
-<script src="../js/kico.js"></script>
-<script src="../js/paul.js"></script>
+<script src="js/kico.js"></script>
+<script src="js/paul.js"></script>
 <!-- 音乐 -->
 <audio 
 	autoplay="autoplay"
    	controls="controls"
   	loop="loop"
   	preload="auto"
-  	src="../music/纯音乐-忧伤还是快乐.mp3">
+  	src="music/纯音乐-忧伤还是快乐.mp3">
 </audio>
 </body>
 </html>
