--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="trip.html" ><p>我的相册</p></a>
             <a href="music.html" ><p>我的音乐</p></a>
             <a href="search.html" ><p>我的导航</p></a>
-            <a href="../welcome.html" ><p>返回首页</p></a>
+            <a href="welcome.html" ><p>返回首页</p></a>
         </div>       
 <main>
     <section>
