--- a/food.html
+++ b/food.html
@@ -12,7 +12,7 @@
 
 <body>
 	<!-- <audio id="audio" controls="controls">
-		<source src="../music/纯音乐-忧伤还是快乐.mp3" type="audio/mp3"></source>
+		<source src="music/纯音乐-忧伤还是快乐.mp3" type="audio/mp3"></source>
 	</audio> -->
 	<!--头部-->
         <div class="nav">
@@ -74,7 +74,7 @@
 			</div>
 			<div class="view">
 				<div class="smallView">
-					<img src="../img/life1.png" width="90px" height="90px" />
+					<img src="img/life1.png" width="90px" height="90px" />
 					<p><span>跑步</span><br />
 						喜欢跑步,喜欢体验跑步过程中的坎坎坷坷,喜欢跑步时的大汗淋漓,喜欢肆意自由而急促的心跳……
 					</p>
