--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="title">个人信息</h2>
             <div class="row">
                 <div class="col-l-4">
-                    <p>姓名：彭坪</p>
+                    <p>姓名：Tranquillit</p>
                     <p>性别：女</p>
                     <p>年龄：20</p>
                     <p>爱好：web前端</p>
